--- a/css/style.css
+++ b/css/style.css
@@ -701,6 +701,12 @@
       background: #F2F2F2;
       color: #000;
       border-radius: 1px; }
+  .contacts_success {
+    font-family: 'Gilroy-Medium';
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f9b1f;
+    margin-top: 20px; }
 
 .form {
   text-align: center;
