--- a/sass/pages/contact/_contacts.scss
+++ b/sass/pages/contact/_contacts.scss
@@ -56,9 +56,9 @@
         }
 
         & input:-webkit-autofill,
-        & input:-webkit-autofill:hover, 
-        & input:-webkit-autofill:focus, 
-        & input:-webkit-autofill:active{
+        & input:-webkit-autofill:hover,
+        & input:-webkit-autofill:focus,
+        & input:-webkit-autofill:active {
             -webkit-box-shadow: 0 0 0 30px #F2F2F2 inset !important;
         }
 
@@ -96,5 +96,13 @@
             color: #000;
             border-radius: 1px;
         }
+    }
+
+    &_success {
+        font-family: 'Gilroy-Medium';
+        font-size: 16px;
+        line-height: 100%;
+        color: #0f9b1f;
+        margin-top: 20px;
     }
 }
