create project page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,7 @@
 @import './pages/about/about';
 @import './pages/projects/projects';
 @import './pages/contact/contacts';
+@import './pages/projects_layouts/project';
 
 @import './components/form';
 
