--- a/sass/pages/home/_portfolio.scss
+++ b/sass/pages/home/_portfolio.scss
@@ -59,7 +59,7 @@
         }
     }
 
-    &_btn {
+    &_btn, &_link {
         font-family: 'Gilroy-Medium';
         font-size: 18px;
         line-height: 21px;
