--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@
     @media (max-width: 350px) {
       .portfolio_name {
         font-size: 23px; } }
-  .portfolio_btn {
+  .portfolio_btn, .portfolio_link {
     font-family: 'Gilroy-Medium';
     font-size: 18px;
     line-height: 21px;
@@ -483,7 +483,7 @@
     border: none;
     margin-left: 11px; }
     @media (min-width: 769px) {
-      .portfolio_btn {
+      .portfolio_btn, .portfolio_link {
         padding: 0;
         background: none;
         text-decoration: underline; } }
@@ -707,6 +707,15 @@
     line-height: 100%;
     color: #0f9b1f;
     margin-top: 20px; }
+
+.project {
+  margin-top: 66px;
+  width: 80%;
+  margin: 0 auto; }
+  .project_b-a {
+    display: flex;
+    width: 74%;
+    justify-content: center; }
 
 .form {
   text-align: center;
