--- a/css/style.css
+++ b/css/style.css
@@ -452,12 +452,45 @@
     @media (min-width: 1025px) {
       .portfolio_blocks {
         padding-top: 80px; } }
+  .portfolio_block {
+    position: relative; }
   @media (max-width: 769px) {
     .portfolio_block:not(.portfolio_block:first-child) {
       margin-top: 80px; } }
   @media (min-width: 769px) {
     .portfolio_block:nth-child(2n) {
       margin-top: 70px; } }
+  .portfolio_popup {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: #f4f4f4;
+    color: #504e4e;
+    font-family: 'Gilroy-Medium';
+    font-size: 18px;
+    line-height: 21px;
+    transform: rotateX(90deg);
+    transition: transform 0.3s ease; }
+    .portfolio_popup-close {
+      position: absolute;
+      top: 8px;
+      right: 21px;
+      font-size: 25px;
+      cursor: pointer; }
+    .portfolio_popup-text {
+      width: 70%;
+      margin: 0 auto; }
+    .portfolio_popup-link {
+      text-decoration: underline;
+      margin: 7px 0; }
+      @media (max-width: 769px) {
+        .portfolio_popup-link {
+          font-size: 16px; } }
   .portfolio img {
     width: 100%;
     object-fit: contain; }
@@ -505,6 +538,10 @@
       @media (min-width: 2000px) {
         .portfolio .button button {
           margin-top: 195px; } }
+
+.popup-link {
+  text-decoration: underline;
+  color: #c2c2c2; }
 
 .contact {
   margin-top: 118px;
