--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -15,6 +15,10 @@
         top: -1px;
         & a {
             color: #313131;
+
+            @media (min-width: 1178px) {
+                font-size: 21px;
+            }
         }
     }
 
