--- a/sass/pages/home/_header.scss
+++ b/sass/pages/home/_header.scss
@@ -154,7 +154,7 @@
             font-family: 'Gilroy-Medium';
             font-size: 18px;
             line-height: 21px;
-            transition: background 0.2s ease-out;
+            transition: background 0.2s ease-out, box-shadow 0.2s ease;
         }
 
         & .btn_green {
@@ -167,8 +167,8 @@
             }
 
             &:hover {
-                background: #ebebeb;
-                color: #000;
+                background: #212121;
+                color: #f2f2f2;
                 box-shadow: none;
             }
         }
