--- a/sass/pages/home/_specialization.scss
+++ b/sass/pages/home/_specialization.scss
@@ -55,8 +55,15 @@
         }
     }
 
+    &_text {
+        font-family: 'Gilroy-Medium';
+        font-size: 16.6px;
+        line-height: 100%;
+    }
+
     &_link {
         text-decoration: underline;
+        font-family: 'Gilroy-SemiBold';
         cursor: pointer;
     }
 
