--- a/sass/pages/home/_specialization.scss
+++ b/sass/pages/home/_specialization.scss
@@ -44,6 +44,7 @@
         & img {
             width: 28px;
             display: inline;
+            filter: blur(0.2px);
         }
 
         & p {
@@ -57,7 +58,7 @@
 
     &_text {
         font-family: 'Gilroy-Medium';
-        font-size: 16.6px;
+        font-size: 16.9px;
         line-height: 100%;
     }
 
