--- a/sass/pages/home/_specialization.scss
+++ b/sass/pages/home/_specialization.scss
@@ -66,6 +66,7 @@
         text-decoration: underline;
         font-family: 'Gilroy-SemiBold';
         cursor: pointer;
+        color: #313131;
     }
 
     & .button {
