3 fixing html validation error

--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -77,6 +77,8 @@
 
     &_menu li:first-child {
         margin-left: 0;
+        position: absolute;
+        top: 0;
     }
 
     &_menu li:last-child {
