--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,9 @@
         margin-left: 0;
         margin-top: 26px; } }
   .nav_menu li:first-child {
-    margin-left: 0; }
+    margin-left: 0;
+    position: absolute;
+    top: 0; }
   .nav_menu li:last-child {
     margin-left: 29px; }
     @media (max-width: 1024px) {
