--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -76,7 +76,7 @@
     }
 
     &_menu li:first-child {
-        margin-left: 0;
+        margin: 0;
         position: absolute;
         top: 0;
     }
