attempt to fix p in h1 validation error

--- a/sass/pages/home/_header.scss
+++ b/sass/pages/home/_header.scss
@@ -116,13 +116,13 @@
             font-size: 62px;
         }
 
-        & span {
-            color: #49AD09;
-        }
+        // & span {
+        //     color: #49AD09;
+        // }
 
-        & p {
-            margin: 0;
-        }
+        // & p {
+        //     margin: 0;
+        // }
     }
 
     &_descr {
