--- a/sass/pages/home/_portfolio.scss
+++ b/sass/pages/home/_portfolio.scss
@@ -115,6 +115,7 @@
         display: flex;
         align-items: center;
         padding: 14px;
+        cursor: pointer;
 
         @media (min-width: 769px) {
             padding: 0;
