--- a/css/style.css
+++ b/css/style.css
@@ -535,8 +535,9 @@
         background: none;
         text-decoration: underline; } }
   .portfolio .button {
-    text-align: center; }
-    .portfolio .button button {
+    text-align: center;
+    margin-top: 69px; }
+    .portfolio .button button, .portfolio .button a {
       border: none;
       margin-top: 24px;
       font-family: 'Gilroy-Medium';
@@ -545,10 +546,10 @@
       color: #FFFFFF;
       box-shadow: none; }
       @media (min-width: 769px) {
-        .portfolio .button button {
+        .portfolio .button button, .portfolio .button a {
           margin-top: 155px; } }
       @media (min-width: 2000px) {
-        .portfolio .button button {
+        .portfolio .button button, .portfolio .button a {
           margin-top: 195px; } }
 
 .popup-link {
@@ -948,6 +949,10 @@ button {
   line-height: 53px;
   color: #313131;
   text-align: center; }
+  @media (max-width: 660px) {
+    .title {
+      width: 90%;
+      margin: 39px auto; } }
   @media (max-width: 420px) {
     .title {
       font-size: 38px; } }
