--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,6 +77,11 @@ button {
     color: #313131;
     text-align: center;
 
+    @media (max-width: 660px) {
+        width: 90%;
+        margin: 39px auto;
+    }
+
     @media (max-width: 420px) {
         font-size: 38px;
     }
