--- a/sass/pages/about/_about.scss
+++ b/sass/pages/about/_about.scss
@@ -43,6 +43,7 @@
 
         & .button {
             display: none;
+            margin-top: 42px;
 
             @media(max-width: 1024px) {
                 display: block;
