--- a/sass/pages/contact/_contacts.scss
+++ b/sass/pages/contact/_contacts.scss
@@ -46,6 +46,8 @@
         margin: 0 auto;
         margin-top: 28px;
         position: relative;
+        display: flex;
+        justify-content: space-between;
 
         @media (max-width: 1024px) {
             width: 226px;
@@ -79,12 +81,14 @@
         & label {
             cursor: pointer;
             position: absolute;
-            right: 15px;
             top: 0;
             bottom: 0;
-            margin: auto 0;
             display: flex;
             align-items: center;
+            width: 100%;
+            right: 0;
+            display: flex;
+            justify-content: center;
         }
 
         & button {
