--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -36,7 +36,7 @@
             padding: 88px 40px 88px 141px;
             transform: translateX(990px);
             display: none;
-            transition: transform 0.3s ease-in, block 0.02s ease;
+            transition: transform 0.3s ease-in;
             z-index: 9999;
         }
 
