--- a/css/style.css
+++ b/css/style.css
@@ -472,9 +472,6 @@
   @media (max-width: 769px) {
     .portfolio_block:not(.portfolio_block:first-child) {
       margin-top: 80px; } }
-  @media (min-width: 769px) {
-    .portfolio_block:nth-child(2n) {
-      margin-top: 70px; } }
   .portfolio_popup {
     opacity: 0;
     position: absolute;
@@ -523,6 +520,14 @@
         font-size: 23px; } }
     .portfolio_name b {
       font-family: 'Gilroy-SemiBold'; }
+  @media (min-width: 1025px) {
+    .portfolio_tech {
+      position: absolute;
+      top: -10px;
+      background: #fff;
+      padding: 12px 10px 10px 10px;
+      opacity: 0.8;
+      letter-spacing: 1.5px; } }
   .portfolio_btn, .portfolio_link {
     font-family: 'Gilroy-Medium';
     font-size: 18px;
