--- a/sass/pages/home/_portfolio.scss
+++ b/sass/pages/home/_portfolio.scss
@@ -28,6 +28,12 @@
 
     &_block {
         position: relative;
+        transition: filter 0.3s ease-in-out;
+
+        &:hover {
+            filter: drop-shadow(10px 10px 10px rgba(134, 134, 134, 0.113));
+            transition: filter 0.5s ease-in-out;
+        }
     }
 
     &_block:not(&_block:first-child) {
@@ -110,6 +116,10 @@
             padding: 12px 10px 10px 10px;
             opacity: 0.8;
             letter-spacing: 1.5px;
+        }
+        @media (max-width: 1025px) {
+            font-size: 18px;
+            margin-bottom: 0;
         }
     }
 
