--- a/sass/pages/home/_specialization.scss
+++ b/sass/pages/home/_specialization.scss
@@ -43,7 +43,7 @@
         & img {
             width: 28px;
             display: inline;
-            filter: blur(0.2px);
+            // filter: blur(0.2px);
         }
 
         & p {
